--- a/.github/workflows/pytest-pull.yml
+++ b/.github/workflows/pytest-pull.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches: [main]
 
+concurrency:
+    group: gh-${{ github.ref }}
+    cancel-in-progress: true
+    
+
 jobs:
   pytest-pull:
     runs-on: ubuntu-latest
