--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [main]
 
+concurrency:
+    group: gh-${{ github.ref }}
+    cancel-in-progress: true
+    
+
 jobs:
   pytest:
     runs-on: ubuntu-latest
