--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 concurrency:
-    group: gh-${{ github.ref }}
+    group: gh-${{ github.ref }}-precommit
     cancel-in-progress: true
     
 
