--- a/.github/workflows/pytest-pull.yml
+++ b/.github/workflows/pytest-pull.yml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 concurrency:
-    group: gh-${{ github.ref }}
+    group: gh-${{ github.ref }}-pytest
     cancel-in-progress: true
     
 
